--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
